--- a/Ionic Source/www/index.html
+++ b/Ionic Source/www/index.html
@@ -10,20 +10,21 @@
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/vspfonts/vspfonts.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkoCe6SWsU-TY313QWkK6zc1KntCoubLc&amp;libraries=places"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcrBFpjkE7Zt8M0mqdpGdAl8CgSTd4yLA&amp;libraries=places"></script>
     <script src="lib/ionic/js/ionic-close-popup.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
     <script src="js/firebase.js"></script>
-	<script>
-	  var config = {
-		apiKey: "AIzaSyB45acmwIT6vbPaGNUPhs3l4qskrjV7o4U",
-		authDomain: "hichat-57e45.firebaseapp.com",
-		databaseURL: "https://hichat-57e45.firebaseio.com",
-		storageBucket: "hichat-57e45.appspot.com",
-	  };
-	  firebase.initializeApp(config);
-	</script>
+    <script>
+      var config = {
+        apiKey: "AIzaSyAcrBFpjkE7Zt8M0mqdpGdAl8CgSTd4yLA",
+        authDomain: "hichat-eea61.firebaseapp.com",
+        databaseURL: "https://hichat-eea61.firebaseio.com",
+        storageBucket: "",
+        messagingSenderId: "911779015332"
+      };
+      firebase.initializeApp(config);
+    </script>
     <script src="js/angularfire.min.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
